chore: rename `expand` query param to `extend`
